@@ -183,7 +183,6 @@ public class FlatNodeGenFactory {
     private final TruffleTypes types = ProcessorContext.getInstance().getTypes();
     private final NodeData node;
     private final TypeSystemData typeSystem;
-    private final TypeMirror genericType;
     private final Set<TypeMirror> expectedTypes = new HashSet<>();
     private final Collection<NodeData> sharingNodes;
 
@@ -205,6 +204,7 @@ public class FlatNodeGenFactory {
     private final Map<ExecutableElement, Function<Call, DSLExpression>> substitutions = new LinkedHashMap<>();
     private final StaticConstants constants;
     private NodeConstants nodeConstants;
+    private final NodeGeneratorPlugs plugs;
 
     private final GeneratorMode generatorMode;
     private final NodeStateResult state;
@@ -215,8 +215,8 @@ public class FlatNodeGenFactory {
     }
 
     public FlatNodeGenFactory(ProcessorContext context, GeneratorMode mode, NodeData node,
-                    StaticConstants constants, NodeConstants nodeConstants) {
-        this(context, mode, node, Arrays.asList(node), node.getSharedCaches(), constants, nodeConstants);
+                    StaticConstants constants, NodeConstants nodeConstants, NodeGeneratorPlugs plugs) {
+        this(context, mode, node, Arrays.asList(node), node.getSharedCaches(), constants, nodeConstants, plugs);
     }
 
     @SuppressWarnings("this-escape")
@@ -224,14 +224,15 @@ public class FlatNodeGenFactory {
                     Collection<NodeData> stateSharingNodes,
                     Map<CacheExpression, String> sharedCaches,
                     StaticConstants constants,
-                    NodeConstants nodeConstants) {
+                    NodeConstants nodeConstants,
+                    NodeGeneratorPlugs plugs) {
         Objects.requireNonNull(node);
+        this.plugs = plugs;
         this.generatorMode = mode;
         this.context = context;
         this.sharingNodes = stateSharingNodes;
         this.node = node;
         this.typeSystem = node.getTypeSystem();
-        this.genericType = context.getType(Object.class);
         this.boxingEliminationEnabled = !TruffleProcessorOptions.generateSlowPathOnly(context.getEnvironment());
         this.primaryNode = stateSharingNodes.iterator().next() == node;
         this.sharedCaches = sharedCaches;
@@ -265,7 +266,7 @@ public class FlatNodeGenFactory {
     }
 
     public static List<InlineFieldData> createInlinedFields(NodeData node) {
-        FlatNodeGenFactory factory = new FlatNodeGenFactory(ProcessorContext.getInstance(), GeneratorMode.DEFAULT, node, new StaticConstants(), new NodeConstants());
+        FlatNodeGenFactory factory = new FlatNodeGenFactory(ProcessorContext.getInstance(), GeneratorMode.DEFAULT, node, new StaticConstants(), new NodeConstants(), NodeGeneratorPlugs.DEFAULT);
         return factory.createInlineFields(true);
     }
 
@@ -348,7 +349,8 @@ public class FlatNodeGenFactory {
         Set<String> handledCaches = new HashSet<>();
         for (NodeData stateNode : sharingNodes) {
             Set<TypeGuard> implicitCasts = new LinkedHashSet<>();
-            boolean needsRewrites = stateNode.needsRewrites(context);
+            boolean needSpecialize = stateNode.needsSpecialize();
+
             List<SpecializationData> specializations = stateNode.getReachableSpecializations();
             for (SpecializationData specialization : specializations) {
                 if (!aotStateAdded && needsAOTReset(node, sharingNodes)) {
@@ -356,7 +358,7 @@ public class FlatNodeGenFactory {
                     aotStateAdded = true;
                 }
 
-                if (needsRewrites) {
+                if (needSpecialize) {
                     stateObjects.add(new SpecializationActive(specialization));
                 }
 
@@ -506,24 +508,12 @@ public class FlatNodeGenFactory {
         return objects.splitBitSets(namePrefix, activeNode, maxBits);
     }
 
-    private boolean needsRewrites() {
-        if (node.needsRewrites(context)) {
-            return true;
-        }
-        for (SpecializationData specialization : node.getReachableSpecializations()) {
-            if (useSpecializationClass(specialization)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
     private static boolean needsAOTReset(NodeData node, Collection<NodeData> stateSharingNodes) {
         if (!node.isGenerateAOT()) {
             return false;
         }
         for (NodeData currentNode : stateSharingNodes) {
-            if (currentNode.needsRewrites(node.getContext())) {
+            if (currentNode.needsState()) {
                 return true;
             }
         }
@@ -576,7 +566,7 @@ public class FlatNodeGenFactory {
         }
 
         if (specialization == null) {
-            throw new AssertionError("if specialization is null it must be shared cache");
+            throw new AssertionError("if specialization is null it must be shared cache: " + specialization + " " + cache + " " + sharedCaches);
         }
 
         Parameter parameter = cache.getParameter();
@@ -1095,7 +1085,7 @@ public class FlatNodeGenFactory {
                         continue;
                     }
 
-                    inlined.add(createCacheInlinedField(builder, null, null, cache));
+                    inlined.addOptional(createCacheInlinedField(builder, null, null, cache));
                 }
             }
 
@@ -1117,8 +1107,7 @@ public class FlatNodeGenFactory {
                         continue;
                     }
 
-                    inlined.add(createCacheInlinedField(builder, specialization, specializationState, cache));
-
+                    inlined.addOptional(createCacheInlinedField(builder, specialization, specializationState, cache));
                 }
             }
 
@@ -1157,6 +1146,17 @@ public class FlatNodeGenFactory {
 
             if (isGenerateAOT()) {
                 generateAOT(inlined, true);
+            }
+
+            if (!node.isGenerateCached()) {
+                // if no cached node is generated we need to generate the expect methods
+                // in the inlined node.
+                for (TypeMirror type : uniqueSortedTypes(expectedTypes, false)) {
+                    if (!typeSystem.hasType(type)) {
+                        clazz.addOptional(TypeSystemCodeGenerator.createExpectMethod(PRIVATE, typeSystem,
+                                        context.getType(Object.class), type));
+                    }
+                }
             }
 
             generateStatisticsFields(inlined);
@@ -1242,79 +1242,145 @@ public class FlatNodeGenFactory {
         final String fieldName = createLocalCachedInlinedName(specialization, cache);
 
         // for state access we need use the shared cache
+        boolean needsInlineTarget = needsInlineTarget(specialization, cache);
+
+        CodeTreeBuilder b = init.create();
+        b.startStaticCall(cache.getInlinedNode().getMethod());
+        b.startStaticCall(types().InlineSupport_InlineTarget, "create");
+        b.typeLiteral(cache.getParameter().getType());
+
         CacheExpression sharedCache = lookupSharedCacheKey(cache);
-
-        init.startStatement();
-        init.string("this.", fieldName, " = ");
-
-        init.startStaticCall(cache.getInlinedNode().getMethod());
-        init.startStaticCall(types().InlineSupport_InlineTarget, "create");
-        init.typeLiteral(cache.getParameter().getType());
-
-        boolean parentAccess = hasCacheParentAccess(cache);
-
         for (InlineFieldData field : sharedCache.getInlinedNode().getFields()) {
             if (field.isState()) {
                 BitSet bitSet = allMultiState.findSet(InlinedNodeState.class, field);
 
-                if (bitSet == null) {
+                if (bitSet == null) { // bitset in specialized class
                     bitSet = findInlinedState(specializationState, field);
-
-                    CodeVariableElement var = createStateUpdaterField(specialization, specializationState, field, specializationClasses.get(specialization).getEnclosedElements());
-                    init.startCall(var.getName(), "subUpdater");
+                    CodeVariableElement stateVariable = createStateUpdaterField(specialization, specializationState, field, specializationClasses.get(specialization).getEnclosedElements());
                     BitRange range = bitSet.getStates().queryRange(StateQuery.create(InlinedNodeState.class, field));
-                    init.string(String.valueOf(range.offset));
-                    init.string(String.valueOf(range.length));
-                    init.end();
 
+                    CodeTreeBuilder helper = b.create();
+                    helper.startCall(stateVariable.getName(), "subUpdater");
+                    helper.string(String.valueOf(range.offset));
+                    helper.string(String.valueOf(range.length));
+                    helper.end();
+
+                    /*
+                     * If we need a target to instantiate we should create a constant for the
+                     * individual field to avoid unnecessary allocations for each instance.
+                     *
+                     * If we don't need an inline target, we don't need to extract into a constant
+                     * here as the entire cached initializer result will be stored as constant. No
+                     * need to create constants for individual fields, which would then be more
+                     * costly.
+                     */
+                    if (needsInlineTarget) {
+                        String updaterFieldName = stateVariable.getSimpleName().toString() + "_" + range.offset + "_" + range.length;
+                        CodeVariableElement var = nodeConstants.updaterReferences.get(updaterFieldName);
+                        if (var == null) {
+                            var = new CodeVariableElement(modifiers(PRIVATE, STATIC, FINAL), stateVariable.getType(), updaterFieldName);
+                            var.createInitBuilder().tree(helper.build());
+                            nodeConstants.updaterReferences.put(updaterFieldName, var);
+                        }
+                        b.string(updaterFieldName);
+                    } else {
+                        b.tree(helper.build());
+                    }
                 } else {
                     if (specializationState != null && specializationState.findSet(InlinedNodeState.class, field) != null) {
                         throw new AssertionError("Inlined field in specializationState and regular state at the same time.");
                     }
-                    init.startGroup();
-                    init.startCall(bitSet.getName() + "_", "subUpdater");
+                    b.startGroup();
+                    b.startCall(bitSet.getName() + "_", "subUpdater");
                     BitRange range = bitSet.getStates().queryRange(StateQuery.create(InlinedNodeState.class, field));
-                    init.string(String.valueOf(range.offset));
-                    init.string(String.valueOf(range.length));
-                    init.end();
-                    init.end();
+                    b.string(String.valueOf(range.offset));
+                    b.string(String.valueOf(range.length));
+                    b.end();
+                    b.end();
                 }
             } else {
-
                 String inlinedFieldName = createCachedInlinedFieldName(specialization, cache, field);
-                if (specialization != null && useSpecializationClass(specialization)) {
-                    if (parentAccess) {
-                        init.startGroup();
-                        init.string("this.", inlinedFieldName);
-                        init.end();
-                    } else {
-                        init.startStaticCall(field.getFieldType(), "create");
-                        init.startGroup();
-                        init.tree(createLookupNodeType(createSpecializationClassReferenceType(specialization), specializationClasses.get(specialization).getEnclosedElements()));
-                        init.end();
-                        init.doubleQuote(inlinedFieldName);
-                        if (field.isReference()) {
-                            init.typeLiteral(field.getType());
+                if (specialization != null && useSpecializationClass(specialization) && cache.getSharedGroup() == null) {
+                    CodeTypeElement specializationDataClass = specializationClasses.get(specialization);
+                    CodeTreeBuilder helper = b.create();
+
+                    helper.startStaticCall(field.getFieldType(), "create");
+                    helper.startGroup();
+                    helper.tree(createLookupNodeType(createSpecializationClassReferenceType(specialization), specializationDataClass.getEnclosedElements()));
+                    helper.end();
+                    helper.doubleQuote(inlinedFieldName);
+                    if (field.isReference()) {
+                        helper.typeLiteral(field.getType());
+                    }
+                    helper.end();
+
+                    if (needsInlineTarget) {
+                        String updaterFieldName = ElementUtils.createConstantName(specializationDataClass.getSimpleName().toString() + "_" + inlinedFieldName) + "_UPDATER";
+                        CodeVariableElement var = nodeConstants.updaterReferences.get(updaterFieldName);
+                        if (var == null) {
+                            var = new CodeVariableElement(modifiers(PRIVATE, STATIC, FINAL), field.getFieldType(), updaterFieldName);
+                            var.createInitBuilder().tree(helper.build());
+                            nodeConstants.updaterReferences.put(updaterFieldName, var);
                         }
-                        init.end();
+                        b.string(updaterFieldName);
+                    } else {
+                        b.tree(helper.build());
                     }
 
                 } else {
-                    init.string(inlinedFieldName);
+                    b.string(inlinedFieldName);
                 }
             }
-
         }
-        init.end();
-        init.end();
-        init.end();
-        CodeVariableElement var = new CodeVariableElement(modifiers(PRIVATE, FINAL), parameter.getType(), fieldName);
-        CodeTreeBuilder builder = var.createDocBuilder();
-        builder.startJavadoc();
-        addSourceDoc(builder, specialization, cache, null);
-        builder.end();
+        b.end();
+        b.end();
 
-        return var;
+        // if the initializer does not need the target we can create a constant instead
+        if (needsInlineTarget) {
+            init.startStatement();
+            init.string("this.", fieldName, " = ");
+            init.tree(b.build());
+            init.end();
+            CodeVariableElement var = new CodeVariableElement(modifiers(PRIVATE, FINAL), parameter.getType(), fieldName);
+            CodeTreeBuilder builder = var.createDocBuilder();
+            builder.startJavadoc();
+            addSourceDoc(builder, specialization, cache, null);
+            builder.end();
+            return var;
+        } else {
+            String name = createStaticInlinedCacheName(specialization, cache);
+            CodeVariableElement var = nodeConstants.updaterReferences.get(name);
+            if (var == null) {
+                var = new CodeVariableElement(modifiers(PRIVATE, STATIC, FINAL), parameter.getType(), name);
+                var.createInitBuilder().tree(b.build());
+                nodeConstants.updaterReferences.put(name, var);
+            }
+            return null;
+        }
+    }
+
+    /**
+     * Returns <code>true</code> if the inlined cache requires any field from the inline target to
+     * get initialized, else <code>false</code>. If it does not depend on the inline target the code
+     * generator can typically extract the instance into a static final field instead of
+     * initializing it in the generated Inlined class constructor.
+     */
+    private boolean needsInlineTarget(SpecializationData specialization, CacheExpression cache) {
+        if (cache.getSharedGroup() != null) {
+            // shared cache -> never in data class
+            return true;
+        }
+        for (InlineFieldData field : cache.getInlinedNode().getFields()) {
+            if (field.isState() && allMultiState.findSet(InlinedNodeState.class, field) == null) {
+                // bit set located in specialization data class, no access to inline target needed
+            } else if (specialization != null && useSpecializationClass(specialization)) {
+                // we use a data class for this specialization so the field is stored there
+            } else {
+                // by default state is stored in the parent node
+                return true;
+            }
+        }
+        return false;
     }
 
     private String createLocalCachedInlinedName(SpecializationData specialization, CacheExpression cache) {
@@ -1732,7 +1798,7 @@ public class FlatNodeGenFactory {
 
         builder.statement("data[0] = 0"); // declare version 0
 
-        boolean needsRewrites = needsRewrites();
+        boolean needsRewrites = node.needsSpecialize();
 
         FrameState frameState = FrameState.load(this, NodeExecutionMode.SLOW_PATH, reflection);
         frameState.setInlinedNode(inlined);
@@ -1785,7 +1851,7 @@ public class FlatNodeGenFactory {
                 }
 
                 builder.startStatement().startCall("cached", "add");
-                builder.startStaticCall(context.getType(List.class), "of");
+                builder.startStaticCall(context.getType(Arrays.class), "<Object>asList");
                 for (CacheExpression cache : specialization.getCaches()) {
                     if (cache.isAlwaysInitialized()) {
                         continue;
@@ -2167,6 +2233,7 @@ public class FlatNodeGenFactory {
         if (inline != null) {
             Parameter parameter = cache.getParameter();
             String fieldName = createStaticInlinedCacheName(specialization, cache);
+
             ExecutableElement cacheMethod = cache.getInlinedNode().getMethod();
             CodeVariableElement cachedField = new CodeVariableElement(modifiers(PRIVATE, STATIC, FINAL), parameter.getType(), fieldName);
             CodeTreeBuilder builder = cachedField.createInitBuilder();
@@ -2180,12 +2247,13 @@ public class FlatNodeGenFactory {
                     if (generateCachedFields) {
                         BitSet specializationBitSet = findInlinedState(specializationState, field);
                         CodeVariableElement updaterField = createStateUpdaterField(specialization, specializationState, field, specializationClassElements);
+                        BitRange range = specializationBitSet.getStates().queryRange(StateQuery.create(InlinedNodeState.class, field));
                         String updaterFieldName = updaterField.getName();
                         builder.startCall(updaterFieldName, "subUpdater");
-                        BitRange range = specializationBitSet.getStates().queryRange(StateQuery.create(InlinedNodeState.class, field));
                         builder.string(String.valueOf(range.offset));
                         builder.string(String.valueOf(range.length));
                         builder.end();
+
                     }
                 } else {
                     /*
@@ -2251,7 +2319,7 @@ public class FlatNodeGenFactory {
             javadoc.end();
 
             if (generateCachedFields) {
-                nodeElements.add(cachedField);
+                nodeConstants.updaterReferences.putIfAbsent(fieldName, cachedField);
             }
         } else {
             Parameter parameter = cache.getParameter();
@@ -2337,7 +2405,7 @@ public class FlatNodeGenFactory {
         if (var == null) {
             var = new CodeVariableElement(modifiers(PRIVATE, STATIC, FINAL), field.getFieldType(), updaterFieldName);
             CodeTreeBuilder b = var.createInitBuilder();
-            b.startStaticCall(types().InlineSupport_StateField, "create");
+            b.startStaticCall(field.getFieldType(), "create");
             if (nodeType == null) {
                 b.startStaticCall(context.getType(MethodHandles.class), "lookup").end();
             } else {
@@ -2467,6 +2535,15 @@ public class FlatNodeGenFactory {
         return fallbackState;
     }
 
+    private List<TypeGuard> getFallbackImplicitCastGuards() {
+        List<TypeGuard> fallbackState = new ArrayList<>();
+        List<SpecializationData> specializations = getFallbackSpecializations();
+        for (SpecializationData specialization : specializations) {
+            fallbackState.addAll(specialization.getImplicitTypeGuards());
+        }
+        return fallbackState;
+    }
+
     private Element createFallbackGuard(boolean inlined) {
         boolean frameUsed = false;
 
@@ -2489,10 +2566,8 @@ public class FlatNodeGenFactory {
         fallbackNeedsState = false;
         fallbackNeedsFrame = frameUsed;
 
-        multiState.createLoad(frameState,
-                        StateQuery.create(SpecializationActive.class, getFallbackSpecializations()),
-                        StateQuery.create(GuardActive.class, getFallbackGuards())); // already
-                                                                                    // loaded
+        multiState.createLoad(frameState, collectFallbackState());
+
         multiState.addParametersTo(frameState, method);
         frameState.addParametersTo(method, Integer.MAX_VALUE, FRAME_VALUE);
 
@@ -2669,23 +2744,28 @@ public class FlatNodeGenFactory {
                 }
             }
 
-            TypeMirror returnType = forType.getReturnType();
-            if (!isVoid(returnType) && !isSubtypeBoxed(context, specialization.getReturnType().getType(), returnType) &&
-                            !isSubtypeBoxed(context, returnType, specialization.getReturnType().getType())) {
-                continue outer;
+            TypeMirror executeReturnType = forType.getReturnType();
+            TypeMirror specializationReturnType = specialization.lookupBoxingOverloadReturnType(forType);
+            if (isReturnTypeCompatible(executeReturnType, specializationReturnType)) {
+                filteredSpecializations.add(specialization);
             }
-            filteredSpecializations.add(specialization);
         }
 
         return filteredSpecializations;
     }
 
-    private List<SpecializationData> filterImplementedSpecializations(List<SpecializationData> specializations, TypeMirror expectedReturnType) {
+    private boolean isReturnTypeCompatible(TypeMirror executeReturnType, TypeMirror specializationReturnType) {
+        return isVoid(executeReturnType) || isVoid(specializationReturnType) || //
+                        isSubtypeBoxed(context, specializationReturnType, executeReturnType) ||
+                        isSubtypeBoxed(context, executeReturnType, specializationReturnType);
+    }
+
+    private List<SpecializationData> filterImplementedSpecializations(List<SpecializationData> specializations, ExecutableTypeData forType) {
         List<SpecializationData> filteredSpecializations = new ArrayList<>();
-        TypeMirror returnType = boxType(context, expectedReturnType);
+        TypeMirror returnType = boxType(context, forType.getReturnType());
 
         for (SpecializationData specialization : specializations) {
-            TypeMirror specializationReturnType = boxType(context, specialization.getReturnType().getType());
+            TypeMirror specializationReturnType = boxType(context, specialization.lookupBoxingOverloadReturnType(forType));
             if (typeEquals(specializationReturnType, returnType)) {
                 filteredSpecializations.add(specialization);
             }
@@ -2717,6 +2797,28 @@ public class FlatNodeGenFactory {
         return compatible;
     }
 
+    public CodeExecutableElement createExecuteMethod(CodeTypeElement clazz, CodeExecutableElement baseMethod,
+                    List<SpecializationData> specializations, boolean skipStateChecks) {
+        final List<SpecializationData> allSpecializations = specializations;
+        int signatureSize = node.getPolymorphicExecutable().getSignatureParameters().size();
+        ExecutableTypeData type = new ExecutableTypeData(node, baseMethod, signatureSize, List.of(node.getFrameType()), false, true);
+
+        List<SpecializationData> implementedSpecializations = allSpecializations;
+        CodeExecutableElement method = createExecuteMethod(type);
+        FrameState frameState = FrameState.load(this, type, Integer.MAX_VALUE, NodeExecutionMode.FAST_PATH, method);
+        if (type.getMethod() == null) {
+            frameState.addParametersTo(method, Integer.MAX_VALUE, FRAME_VALUE);
+        } else {
+            renameOriginalParameters(type, method, frameState);
+        }
+        clazz.add(method);
+        CodeTreeBuilder builder = method.createBuilder();
+        SpecializationGroup group = SpecializationGroup.create(implementedSpecializations);
+        frameState.setSkipStateChecks(skipStateChecks);
+        builder.tree(createFastPath(builder, implementedSpecializations, group, type, frameState));
+        return method;
+    }
+
     private CodeExecutableElement createExecute(CodeTypeElement clazz, ExecutableTypeData type, List<ExecutableTypeData> delegateableTypes, boolean inlined) {
         final List<SpecializationData> allSpecializations = node.getReachableSpecializations();
         final List<SpecializationData> compatibleSpecializations = filterCompatibleSpecializations(allSpecializations, type);
@@ -2724,7 +2826,7 @@ public class FlatNodeGenFactory {
         if (delegateableTypes.isEmpty()) {
             implementedSpecializations = compatibleSpecializations;
         } else {
-            implementedSpecializations = filterImplementedSpecializations(compatibleSpecializations, type.getReturnType());
+            implementedSpecializations = filterImplementedSpecializations(compatibleSpecializations, type);
         }
 
         CodeExecutableElement method = createExecuteMethod(type);
@@ -2802,20 +2904,19 @@ public class FlatNodeGenFactory {
             effectiveEvaluatedCount++;
         }
 
-        boolean isExecutableInUncached = effectiveEvaluatedCount != node.getExecutionCount() && !node.getChildren().isEmpty();
-        if (!isExecutableInUncached) {
-            GeneratorUtils.addBoundaryOrTransferToInterpreter(method, builder);
-        }
-
         if (forType.getMethod() != null) {
             method.getModifiers().addAll(forType.getMethod().getModifiers());
             method.getModifiers().remove(Modifier.ABSTRACT);
         }
 
+        boolean isExecutableInUncached = effectiveEvaluatedCount != node.getExecutionCount() && !node.getChildren().isEmpty();
         if (isExecutableInUncached) {
             builder.tree(GeneratorUtils.createShouldNotReachHere("This execute method cannot be used for uncached node versions as it requires child nodes to be present. " +
                             "Use an execute method that takes all arguments as parameters."));
         } else {
+            if (forType.isReachableForRuntimeCompilation()) {
+                GeneratorUtils.addBoundaryOrTransferToInterpreter(method, builder);
+            }
             generateTraceOnEnterCall(builder, frameState);
             generateTraceOnExceptionStart(builder);
             SpecializationGroup group = SpecializationGroup.create(compatibleSpecializations);
@@ -2868,7 +2969,7 @@ public class FlatNodeGenFactory {
 
                 if (delegateType != null) {
                     List<SpecializationData> delegateSpecializations = filterImplementedSpecializations(
-                                    filterCompatibleSpecializations(node.getReachableSpecializations(), delegateType), delegateType.getReturnType());
+                                    filterCompatibleSpecializations(node.getReachableSpecializations(), delegateType), delegateType);
                     coversAllSpecializations = delegateSpecializations.size() == node.getReachableSpecializations().size();
                     if (!coversAllSpecializations) {
                         builder.tree(multiState.createLoadFastPath(frameState, delegateSpecializations));
@@ -2929,7 +3030,7 @@ public class FlatNodeGenFactory {
             builder.startTryBlock();
             builder.tree(delegateBuilder.build());
             builder.end().startCatchBlock(types.UnexpectedResultException, "ex");
-            builder.tree(createTransferToInterpreterAndInvalidate());
+            builder.tree(GeneratorUtils.createTransferToInterpreterAndInvalidate());
 
             if (isVoid(type.getReturnType())) {
                 builder.returnStatement();
@@ -2970,7 +3071,7 @@ public class FlatNodeGenFactory {
     }
 
     private CodeExecutableElement createExecuteAndSpecialize(boolean inlined) {
-        if (!needsRewrites()) {
+        if (!node.needsSpecialize()) {
             return null;
         }
         String frame = null;
@@ -3263,12 +3364,8 @@ public class FlatNodeGenFactory {
         List<LocalVariable> locals = new ArrayList<>();
         for (NodeExecutionData execution : node.getChildExecutions()) {
             NodeChildData child = execution.getChild();
+            nodes.add(plugs.createNodeChildReferenceForException(this, frameState, execution, child));
             LocalVariable var = frameState.getValue(execution);
-            if (child != null && !frameState.getMode().isUncached()) {
-                nodes.add(accessNodeField(execution));
-            } else {
-                nodes.add("null");
-            }
             if (var != null) {
                 locals.add(var);
             }
@@ -3332,11 +3429,20 @@ public class FlatNodeGenFactory {
         builder.end();
     }
 
+    @SuppressWarnings("unused")
+    String createNodeChildReferenceForException(final FrameState frameState, NodeExecutionData execution, NodeChildData child) {
+        if (child != null && !frameState.getMode().isUncached()) {
+            return accessNodeField(execution);
+        } else {
+            return "null";
+        }
+    }
+
     private CodeTree createFastPath(CodeTreeBuilder parent, List<SpecializationData> allSpecializations, SpecializationGroup originalGroup, final ExecutableTypeData currentType,
                     FrameState frameState) {
         final CodeTreeBuilder builder = parent.create();
 
-        boolean needsRewrites = needsRewrites();
+        boolean needsRewrites = node.needsSpecialize();
         if (needsRewrites) {
             builder.tree(multiState.createLoadFastPath(frameState, allSpecializations));
         }
@@ -3433,7 +3539,7 @@ public class FlatNodeGenFactory {
         int parameterIndex = 0;
         for (BitSet set : multiState.getSets()) {
             LocalVariable local = frameState.get(set.getName());
-            if (local != null && MultiStateBitSet.isRelevantForFastPath(set, specializations)) {
+            if (local != null && MultiStateBitSet.isRelevantForFastPath(frameState, set, specializations)) {
                 CodeVariableElement var = (CodeVariableElement) method.getParameters().get(parameterIndex);
                 String oldName = var.getName();
                 String newName = var.getName() + "__";
@@ -3485,21 +3591,32 @@ public class FlatNodeGenFactory {
         generateTraceOnEnterCall(builder, frameState);
         generateTraceOnExceptionStart(builder);
 
-        if (needsAOTReset(node, sharingNodes) && node.needsRewrites(context)) {
+        if (needsAOTReset(node, sharingNodes)) {
             builder.startIf();
             builder.startStaticCall(ElementUtils.findMethod(types.CompilerDirectives, "inInterpreter")).end();
             builder.string(" && ");
             builder.tree(allMultiState.createContains(frameState, AOT_PREPARED));
             builder.end().startBlock();
-            builder.tree(createCallExecuteAndSpecialize(currentType, originalFrameState));
+
+            if (!node.needsSpecialize()) {
+                builder.startStatement().startCall("this.resetAOT_");
+                if (frameState.isInlinedNode()) {
+                    builder.tree(frameState.getValue(INLINED_NODE_INDEX).createReference());
+                }
+                builder.end().end();
+            } else {
+                builder.tree(createCallExecuteAndSpecialize(builder, currentType, originalFrameState));
+            }
+
             builder.end();
         }
 
         builder.tree(visitSpecializationGroup(builder, null, group, currentType, frameState, allowedSpecializations));
 
         if (group.hasFallthrough()) {
-            builder.tree(createTransferToInterpreterAndInvalidate());
-            builder.tree(createCallExecuteAndSpecialize(currentType, originalFrameState));
+            builder.tree(GeneratorUtils.createTransferToInterpreterAndInvalidate());
+            builder.tree(createCallExecuteAndSpecialize(builder, currentType, originalFrameState));
+
         }
         generateTraceOnExceptionEnd(builder);
         return builder.build();
@@ -3591,23 +3708,7 @@ public class FlatNodeGenFactory {
         if (var == null) {
             TypeMirror targetType;
 
-            TypeGuard eliminatedGuard = null;
-            if (boxingEliminationEnabled) {
-                for (TypeGuard checkedGuard : group.getTypeGuards()) {
-                    if (!isPrimitive(checkedGuard.getType())) {
-                        // no elimination for non primitive types
-                        continue;
-                    } else if (node.getChildExecutions().get(checkedGuard.getSignatureIndex()).getChild().findExecutableType(checkedGuard.getType()) == null) {
-                        // type cannot be executed so it cannot be eliminated
-                        continue;
-                    }
-
-                    if (checkedGuard.getSignatureIndex() == execution.getIndex()) {
-                        eliminatedGuard = checkedGuard;
-                        break;
-                    }
-                }
-            }
+            TypeGuard eliminatedGuard = findBoxingEliminationGuard(group, execution);
             if (eliminatedGuard != null) {
                 // we can optimize the type guard away by executing it
                 group.getTypeGuards().remove(eliminatedGuard);
@@ -3615,6 +3716,7 @@ public class FlatNodeGenFactory {
             } else {
                 targetType = execution.getChild().findAnyGenericExecutableType(context).getReturnType();
             }
+
             var = frameState.createValue(execution, targetType).nextName();
 
             LocalVariable fallbackVar;
@@ -3674,24 +3776,39 @@ public class FlatNodeGenFactory {
         return builder.build();
     }
 
+    private TypeGuard findBoxingEliminationGuard(SpecializationGroup group, NodeExecutionData execution) {
+        if (!boxingEliminationEnabled) {
+            return null;
+        }
+        TypeGuard guard = group.getTypeGuards().stream().filter((g) -> g.getSignatureIndex() == execution.getIndex()).findFirst().orElse(null);
+        if (guard == null) {
+            return null;
+        }
+        NodeExecutionData currentExecution = node.getChildExecutions().get(guard.getSignatureIndex());
+        if (plugs.canBoxingEliminateType(currentExecution, guard.getType())) {
+            return guard;
+        }
+        return null;
+    }
+
     private CodeTree createAssignExecuteChild(FrameState originalFrameState, FrameState frameState, CodeTreeBuilder parent, NodeExecutionData execution, ExecutableTypeData forType,
                     LocalVariable targetValue) {
         CodeTreeBuilder builder = parent.create();
 
-        ChildExecutionResult executeChild = createExecuteChild(builder, originalFrameState, frameState, execution, targetValue);
+        ChildExecutionResult executeChild = plugs.createExecuteChild(this, builder, originalFrameState, frameState, execution, targetValue);
         builder.tree(createTryExecuteChild(targetValue, executeChild.code, true, executeChild.throwsUnexpectedResult));
         builder.end();
         if (executeChild.throwsUnexpectedResult) {
             builder.startCatchBlock(types.UnexpectedResultException, "ex");
-            builder.tree(createTransferToInterpreterAndInvalidate());
-            FrameState slowPathFrameState = originalFrameState.copy();
+            builder.tree(GeneratorUtils.createTransferToInterpreterAndInvalidate());
+            FrameState slowPathFrameState = originalFrameState.copy(NodeExecutionMode.SLOW_PATH);
             slowPathFrameState.setValue(execution, targetValue.makeGeneric(context).accessWith(CodeTreeBuilder.singleString("ex.getResult()")));
 
             ExecutableTypeData delegateType = node.getGenericExecutableType(forType);
             boolean found = false;
             for (NodeExecutionData otherExecution : node.getChildExecutions()) {
                 if (found) {
-                    LocalVariable childEvaluatedValue = slowPathFrameState.createValue(otherExecution, genericType);
+                    LocalVariable childEvaluatedValue = slowPathFrameState.createValue(otherExecution, node.getGenericType(otherExecution));
                     builder.tree(createAssignExecuteChild(slowPathFrameState.copy(), slowPathFrameState, builder, otherExecution, delegateType, childEvaluatedValue));
                     slowPathFrameState.setValue(otherExecution, childEvaluatedValue);
                 } else {
@@ -3699,7 +3816,22 @@ public class FlatNodeGenFactory {
                     found = execution == otherExecution;
                 }
             }
-            builder.tree(createCallExecuteAndSpecialize(forType, slowPathFrameState));
+
+            if (node.needsSpecialize()) {
+                builder.tree(createCallExecuteAndSpecialize(builder, forType, slowPathFrameState));
+            } else {
+                LocalVariable slowPathValue = slowPathFrameState.getValue(execution);
+                builder.startTryBlock();
+                builder.startStatement();
+                builder.string(targetValue.getName()).string(" = ");
+                builder.tree(expect(slowPathValue.getTypeMirror(), targetValue.getTypeMirror(), slowPathValue.createReference()));
+                builder.end();
+                builder.end().startCatchBlock(types.UnexpectedResultException, "e");
+                builder.tree(createThrowUnsupported(builder, slowPathFrameState));
+                builder.end();
+
+            }
+
             builder.end();
         }
 
@@ -3718,7 +3850,7 @@ public class FlatNodeGenFactory {
         return new ChildExecutionResult(result, executableType.hasUnexpectedValue() || needsCastTo(sourceType, targetType));
     }
 
-    private ChildExecutionResult createExecuteChild(CodeTreeBuilder parent, FrameState originalFrameState, FrameState frameState, NodeExecutionData execution, LocalVariable target) {
+    public ChildExecutionResult createExecuteChild(CodeTreeBuilder parent, FrameState originalFrameState, FrameState frameState, NodeExecutionData execution, LocalVariable target) {
 
         ChildExecutionResult result;
         if (!typeSystem.hasImplicitSourceTypes(target.getTypeMirror())) {
@@ -3825,6 +3957,9 @@ public class FlatNodeGenFactory {
     private List<ExecutableTypeData> filterExecutableTypes(List<ExecutableTypeData> executableTypes, List<SpecializationData> specializations) {
         Set<TypeMirror> specializedReturnTypes = new HashSet<>();
         for (SpecializationData specialization : specializations) {
+            for (SpecializationData boxingOverload : specialization.getBoxingOverloads()) {
+                specializedReturnTypes.add(boxingOverload.getReturnType().getType());
+            }
             specializedReturnTypes.add(specialization.getReturnType().getType());
         }
 
@@ -4108,6 +4243,10 @@ public class FlatNodeGenFactory {
             executable = new CodeExecutableElement(modifiers(PUBLIC), returnType, methodName);
         }
 
+        for (VariableElement arg : plugs.additionalArguments()) {
+            executable.addParameter(arg);
+        }
+
         DeclaredType unexpectedResult = types.UnexpectedResultException;
         Iterator<TypeMirror> thrownTypes = executable.getThrownTypes().iterator();
         while (thrownTypes.hasNext()) {
@@ -4155,29 +4294,43 @@ public class FlatNodeGenFactory {
 
     private boolean needsUnexpectedResultException(ExecutableTypeData executedType) {
         if (!executedType.hasUnexpectedValue()) {
+            // unexpected result is not compatible
             return false;
         }
 
         if (isSubtypeBoxed(context, executeAndSpecializeType.getReturnType(), executedType.getReturnType())) {
+            for (SpecializationData specialization : node.getReachableSpecializations()) {
+                SpecializationData overload = specialization.lookupBoxingOverload(executedType);
+                if (overload != null && overload.hasUnexpectedResultRewrite()) {
+                    return true;
+                }
+            }
+
+            // generic does not support boxed
             return false;
         } else {
             return true;
         }
     }
 
+    private StateQuery[] collectFallbackState() {
+        StateQuery fallbackActive = StateQuery.create(SpecializationActive.class, getFallbackSpecializations());
+        StateQuery fallbackGuardsActive = StateQuery.create(GuardActive.class, getFallbackGuards());
+        StateQuery fallbackImplicitCasts = StateQuery.create(ImplicitCastState.class, getFallbackImplicitCastGuards());
+        return new StateQuery[]{fallbackActive, fallbackGuardsActive, fallbackImplicitCasts};
+    }
+
     private CodeTree createFastPathExecute(CodeTreeBuilder parent, final ExecutableTypeData forType, SpecializationData specialization, FrameState frameState) {
         CodeTreeBuilder builder = parent.create();
         int ifCount = 0;
         if (specialization.isFallback()) {
-            StateQuery fallbackActive = StateQuery.create(SpecializationActive.class, getFallbackSpecializations());
-            StateQuery fallbackGuardsActive = StateQuery.create(GuardActive.class, getFallbackGuards());
 
             if (fallbackNeedsState) {
-                builder.tree(multiState.createLoad(frameState, fallbackActive, fallbackGuardsActive));
+                builder.tree(multiState.createLoad(frameState, collectFallbackState()));
             }
             builder.startIf().startCall(createFallbackName());
             if (fallbackNeedsState) {
-                multiState.addReferencesTo(frameState, builder, fallbackActive, fallbackGuardsActive);
+                multiState.addReferencesTo(frameState, builder, collectFallbackState());
             }
             if (fallbackNeedsFrame) {
                 if (frameState.get(FRAME_VALUE) != null) {
@@ -4211,6 +4364,7 @@ public class FlatNodeGenFactory {
             suppressed.retainAll(Arrays.asList("deprecated", "all"));
             GeneratorUtils.mergeSuppressWarnings(frameState.method, suppressed.toArray(new String[suppressed.size()]));
         }
+
         ExecutableElement targetMethod = specialization.getMethod();
         if (targetMethod == null) {
             builder.tree(createThrowUnsupported(builder, frameState));
@@ -4307,9 +4461,14 @@ public class FlatNodeGenFactory {
                 }
 
             }
+            SpecializationData boxingOverload = specialization.lookupBoxingOverload(forType);
+            if (boxingOverload != null) {
+                targetMethod = boxingOverload.getMethod();
+            }
+            CodeTree specializationCall = callMethod(frameState, null, targetMethod, bindings);
+            TypeMirror specializationReturnType = specialization.lookupBoxingOverloadReturnType(forType);
 
-            CodeTree specializationCall = callMethod(frameState, null, specialization.getMethod(), bindings);
-            if (isVoid(specialization.getMethod().getReturnType())) {
+            if (isVoid(specializationReturnType)) {
                 builder.statement(specializationCall);
                 if (isVoid(forType.getReturnType())) {
                     builder.returnStatement();
@@ -4318,7 +4477,7 @@ public class FlatNodeGenFactory {
                 }
             } else {
                 builder.startReturn();
-                builder.tree(expectOrCast(specialization.getReturnType().getType(), forType, specializationCall));
+                builder.tree(expectOrCast(specializationReturnType, forType, specializationCall));
                 builder.end();
             }
         }
@@ -4520,14 +4679,12 @@ public class FlatNodeGenFactory {
 
         NodeExecutionMode mode = frameState.getMode();
         boolean hasFallthrough = false;
-        boolean hasImplicitCast = false;
         List<IfTriple> cachedTriples = new ArrayList<>();
         for (TypeGuard guard : group.getTypeGuards()) {
             IfTriple triple = createTypeCheckOrCast(frameState, group, guard, mode, false, true);
             if (triple != null) {
                 cachedTriples.add(triple);
             }
-            hasImplicitCast = hasImplicitCast || node.getTypeSystem().hasImplicitSourceTypes(guard.getType());
             if (!mode.isGuardFallback()) {
                 triple = createTypeCheckOrCast(frameState, group, guard, mode, true, true);
                 if (triple != null) {
@@ -4606,7 +4763,7 @@ public class FlatNodeGenFactory {
 
             cachedTriples = IfTriple.optimize(cachedTriples);
 
-            if (specialization != null && !hasImplicitCast) {
+            if (specialization != null) {
                 IfTriple singleCondition = null;
                 if (cachedTriples.size() == 1) {
                     singleCondition = cachedTriples.get(0);
@@ -4614,9 +4771,26 @@ public class FlatNodeGenFactory {
                 if (singleCondition != null) {
                     int index = cachedTriples.indexOf(singleCondition);
                     CodeTreeBuilder b = new CodeTreeBuilder(parent);
+
                     b.string("!(");
                     b.tree(createSpecializationActiveCheck(frameState, Arrays.asList(specialization)));
+
+                    /*
+                     * We can only optimize the fallback type check away if all implicit cast bits
+                     * were exercised. Otherwise we need to keep in all implicit cast checks.
+                     */
+                    List<TypeGuard> guards = specialization.getImplicitTypeGuards();
+                    if (!guards.isEmpty()) {
+                        StateQuery query = StateQuery.create(ImplicitCastState.class, guards);
+                        CodeTree stateCheck = multiState.createContainsAll(frameState, query);
+                        if (!stateCheck.isEmpty()) {
+                            b.newLine();
+                            b.string(" && ").tree(stateCheck);
+                        }
+                    }
+
                     b.string(")");
+
                     cachedTriples.set(index, new IfTriple(singleCondition.prepare, combineTrees(" && ", b.build(), singleCondition.condition), singleCondition.statements));
                     fallbackNeedsState = true;
                 }
@@ -4649,7 +4823,7 @@ public class FlatNodeGenFactory {
             }
             builder.end(innerIfCount.blockCount);
             builder.end(ifCount.blockCount);
-            hasFallthrough |= ifCount.ifCount > 0 || innerIfCount.ifCount > 0;
+            hasFallthrough |= ifCount.ifCount > 0 || innerIfCount.ifCount > 0 || (specialization != null && !specialization.getExceptions().isEmpty());
         } else {
             throw new AssertionError("unexpected path");
         }
@@ -4693,9 +4867,18 @@ public class FlatNodeGenFactory {
         boolean pushEncapsulatingNode = specialization.needsPushEncapsulatingNode();
         boolean extractInBoundary = specialization.needsTruffleBoundary();
 
-        if (extractInBoundary && specialization.needsVirtualFrame()) {
+        if (extractInBoundary) {
             // Cannot extract to boundary with a virtual frame.
-            extractInBoundary = false;
+            if (specialization.hasFrameParameter()) {
+                extractInBoundary = false;
+            } else {
+                for (VariableElement v : plugs.additionalArguments()) {
+                    if (ElementUtils.typeEquals(v.asType(), types.VirtualFrame) || ElementUtils.typeEquals(v.asType(), types.Frame)) {
+                        extractInBoundary = false;
+                        break;
+                    }
+                }
+            }
         }
 
         List<IfTriple> nonBoundaryGuards = new ArrayList<>();
@@ -4796,13 +4979,13 @@ public class FlatNodeGenFactory {
 
     private List<IfTriple> createSpecializationActive(FrameState frameState, SpecializationGroup group,
                     Collection<SpecializationData> allowedSpecializations) {
+        if (frameState.isSkipStateChecks()) {
+            return List.of();
+        }
         List<SpecializationData> specializations = group.collectSpecializations();
-        final boolean stateGuaranteed = group.isLast() && allowedSpecializations != null && allowedSpecializations.size() == 1 &&
-                        group.getAllSpecializations().size() == allowedSpecializations.size();
-        if (needsRewrites()) {
-
+        final boolean stateGuaranteed = isStateGuaranteed(group, allowedSpecializations);
+        if (node.needsSpecialize()) {
             CodeTree stateCheck = createSpecializationActiveCheck(frameState, specializations);
-
             CodeTree assertCheck = null;
             CodeTree stateGuard = null;
             if (stateGuaranteed) {
@@ -4812,7 +4995,12 @@ public class FlatNodeGenFactory {
             }
             return Arrays.asList(new IfTriple(null, stateGuard, assertCheck));
         }
-        return Collections.emptyList();
+        return List.of();
+    }
+
+    private static boolean isStateGuaranteed(SpecializationGroup group, Collection<SpecializationData> allowedSpecializations) {
+        return group.isLast() && allowedSpecializations != null && allowedSpecializations.size() == 1 &&
+                        group.getAllSpecializations().size() == allowedSpecializations.size();
     }
 
     private CodeTree createSpecializationActiveCheck(FrameState frameState, List<SpecializationData> specializations) {
@@ -4975,6 +5163,8 @@ public class FlatNodeGenFactory {
 
         builder.tree(multiState.createSet(innerFrameState, stateTransaction, StateQuery.create(SpecializationActive.class, specialization), true, false));
         builder.tree(multiState.persistTransaction(innerFrameState, stateTransaction));
+
+        plugs.notifySpecialize(this, builder, frameState, specialization);
 
         if (types.SlowPathListener != null && ElementUtils.isAssignable(specialization.getNode().getTemplateType().asType(), types.SlowPathListener)) {
             builder.startStatement().startCall("afterSpecialize").end().end();
@@ -5569,6 +5759,7 @@ public class FlatNodeGenFactory {
                     }
                 }
             }
+
             builder.tree((multiState.createSet(frameState, transaction,
                             StateQuery.create(SpecializationActive.class, excludesSpecializations), false, transaction == null)));
         }
@@ -5867,8 +6058,12 @@ public class FlatNodeGenFactory {
             exceptionTypes[i] = type;
         }
         builder.end().startCatchBlock(exceptionTypes, "ex");
-        builder.tree(createTransferToInterpreterAndInvalidate());
-        builder.tree(createExcludeThis(builder, frameState, forType, specialization));
+
+        // fallthrough uncached
+        if (!frameState.getMode().isUncached()) {
+            builder.tree(GeneratorUtils.createTransferToInterpreterAndInvalidate());
+            builder.tree(createExcludeThis(builder, frameState, forType, specialization));
+        }
 
         builder.end();
         return builder.build();
@@ -5896,6 +6091,7 @@ public class FlatNodeGenFactory {
         builder.tree(this.multiState.createSet(innerFrameState, transaction, activeQuery, false, false));
         builder.tree(this.multiState.createSet(innerFrameState, transaction, excludedQuery, true, false));
         builder.tree(this.multiState.persistTransaction(innerFrameState, transaction));
+        plugs.notifySpecialize(this, builder, innerFrameState, specialization);
 
         for (SpecializationData removeSpecialization : specializations) {
             if (useSpecializationClass(removeSpecialization)) {
@@ -5913,10 +6109,10 @@ public class FlatNodeGenFactory {
                 builder.startIf().string("ex").instanceOf(types.UnexpectedResultException).end().startBlock();
                 builder.tree(createReturnUnexpectedResult(forType, true));
                 builder.end().startElseBlock();
-                builder.tree(createCallExecuteAndSpecialize(forType, frameState));
+                builder.tree(createCallExecuteAndSpecialize(builder, forType, frameState));
                 builder.end();
             } else {
-                builder.tree(createCallExecuteAndSpecialize(forType, frameState));
+                builder.tree(createCallExecuteAndSpecialize(builder, forType, frameState));
             }
         } else {
             assert hasUnexpectedResultRewrite;
@@ -5948,6 +6144,7 @@ public class FlatNodeGenFactory {
             if (!useSpecializationClass || !specialization.hasMultipleInstances()) {
                 // single instance remove
                 builder.tree((multiState.createSet(frameState, null, StateQuery.create(SpecializationActive.class, specialization), false, true)));
+                plugs.notifySpecialize(this, builder, frameState, specialization);
                 if (useSpecializationClass) {
                     builder.startStatement();
                     builder.tree(createSpecializationFieldAccess(frameState, specialization, true, true, null, CodeTreeBuilder.singleString("null")));
@@ -6014,7 +6211,7 @@ public class FlatNodeGenFactory {
             builder.string(specializationLocalName);
         }
         builder.end().end();
-        builder.tree(createCallExecuteAndSpecialize(forType, frameState));
+        builder.tree(createCallExecuteAndSpecialize(builder, forType, frameState));
         return builder.build();
     }
 
@@ -6049,28 +6246,37 @@ public class FlatNodeGenFactory {
             }
         }
 
-        CodeTree call = callMethod(frameState, null, targetType.getMethod(), bindings.toArray(new CodeTree[0]));
+        CodeTreeBuilder callBuilder = CodeTreeBuilder.createBuilder();
+        callBuilder.startCall("this", targetType.getMethod());
+        callBuilder.trees(bindings.toArray(new CodeTree[0]));
+        callBuilder.variables(plugs.additionalArguments());
+        callBuilder.end();
+
         CodeTreeBuilder builder = CodeTreeBuilder.createBuilder();
         builder = builder.create();
         if (isVoid(forType.getReturnType())) {
-            builder.statement(call);
+            builder.statement(callBuilder.build());
             builder.returnStatement();
         } else {
             builder.startReturn();
-            builder.tree(expectOrCast(returnType, forType, call));
+            builder.tree(expectOrCast(returnType, forType, callBuilder.build()));
             builder.end();
         }
         return builder.build();
     }
 
-    private CodeTree createCallExecuteAndSpecialize(ExecutableTypeData forType, FrameState frameState) {
+    private CodeTree createCallExecuteAndSpecialize(CodeTreeBuilder parent, ExecutableTypeData forType, FrameState frameState) {
+        if (!node.needsSpecialize()) {
+            return createThrowUnsupported(parent, frameState);
+        }
+
         TypeMirror returnType = node.getPolymorphicExecutable().getReturnType();
         String frame = null;
         if (needsFrameToExecute(node.getReachableSpecializations())) {
             frame = FRAME_VALUE;
         }
 
-        CodeTreeBuilder builder = CodeTreeBuilder.createBuilder();
+        CodeTreeBuilder builder = parent.create();
         builder.startCall(createExecuteAndSpecializeName());
         frameState.addReferencesTo(builder, frame);
         builder.end();
@@ -6894,16 +7100,25 @@ public class FlatNodeGenFactory {
                 if (localVariable != null) {
                     bindings.put(variable, localVariable);
                 }
-            } else if (specialization.isNodeReceiverVariable(variable.getResolvedVariable())) {
-                CodeTree accessor = createNodeAccess(frameState, specialization);
-                if (substituteNodeWithSpecializationClass(specialization) && !frameState.mode.isUncached()) {
-                    String localName = createSpecializationLocalName(specialization);
-                    bindings.put(variable, new LocalVariable(types.Node, localName, accessor));
+            } else {
+                CodeTree tree = plugs.bindExpressionValue(frameState, variable);
+                if (tree != null) {
+                    bindings.put(variable, new LocalVariable(variable.getResolvedType(), "$bytecode", tree));
                 } else {
-                    bindings.put(variable, new LocalVariable(variable.getResolvedType(), "this", accessor));
+                    if (specialization.isNodeReceiverVariable(variable.getResolvedVariable())) {
+                        CodeTree accessor = createNodeAccess(frameState, specialization);
+                        if (substituteNodeWithSpecializationClass(specialization) && !frameState.mode.isUncached()) {
+                            String localName = createSpecializationLocalName(specialization);
+                            bindings.put(variable, new LocalVariable(types.Node, localName, accessor));
+                        } else {
+                            bindings.put(variable, new LocalVariable(variable.getResolvedType(), "this", accessor));
+                        }
+                    }
                 }
+
             }
         }
+
         return bindings;
     }
 
@@ -7070,7 +7285,7 @@ public class FlatNodeGenFactory {
             return initializeCache(frameState, specialization, cache);
         }
         if (cache.getInlinedNode() != null) {
-            if (frameState.isInlinedNode()) {
+            if (frameState.isInlinedNode() && needsInlineTarget(specialization, cache)) {
                 CodeTreeBuilder builder = CodeTreeBuilder.createBuilder();
                 String cacheFieldName = createLocalCachedInlinedName(specialization, cache);
                 builder.string("this.", cacheFieldName);
@@ -7545,12 +7760,12 @@ public class FlatNodeGenFactory {
         }
     }
 
-    private static class ChildExecutionResult {
+    public static class ChildExecutionResult {
 
         CodeTree code;
         final boolean throwsUnexpectedResult;
 
-        ChildExecutionResult(CodeTree code, boolean throwsUnexpectedResult) {
+        public ChildExecutionResult(CodeTree code, boolean throwsUnexpectedResult) {
             this.code = code;
             this.throwsUnexpectedResult = throwsUnexpectedResult;
         }
@@ -7607,10 +7822,6 @@ public class FlatNodeGenFactory {
                 length += a.getBitCount();
             }
             return length;
-        }
-
-        CodeTree createContainsAll(FrameState frameState, StateQuery elements) {
-            return createContainsImpl(all, frameState, elements);
         }
 
         List<CodeVariableElement> createCachedFields() {
@@ -7702,7 +7913,7 @@ public class FlatNodeGenFactory {
         CodeTree createLoadFastPath(FrameState frameState, List<SpecializationData> specializations) {
             CodeTreeBuilder builder = CodeTreeBuilder.createBuilder();
             for (BitSet bitSet : getSets()) {
-                if (isRelevantForFastPath(bitSet, specializations)) {
+                if (isRelevantForFastPath(frameState, bitSet, specializations)) {
                     builder.tree(bitSet.createLoad(frameState));
                 }
             }
@@ -7720,8 +7931,8 @@ public class FlatNodeGenFactory {
             return builder.build();
         }
 
-        static boolean isRelevantForFastPath(BitSet bitSet, Collection<SpecializationData> usedSpecializations) {
-            if (bitSet.getStates().contains(StateQuery.create(SpecializationActive.class, usedSpecializations))) {
+        static boolean isRelevantForFastPath(FrameState frameState, BitSet bitSet, Collection<SpecializationData> usedSpecializations) {
+            if (!frameState.isSkipStateChecks() && bitSet.getStates().contains(StateQuery.create(SpecializationActive.class, usedSpecializations))) {
                 return true;
             }
             if (bitSet.getStates().contains(AOT_PREPARED)) {
@@ -7761,9 +7972,27 @@ public class FlatNodeGenFactory {
             return false;
         }
 
+        @SuppressWarnings("unused")
+        static boolean isRelevantForQuickening(BitSet bitSet, Collection<SpecializationData> usedSpecializations) {
+            if (bitSet.getStates().contains(StateQuery.create(SpecializationActive.class, usedSpecializations))) {
+                return true;
+            }
+            for (ImplicitCastState state : bitSet.getStates().queryStates(ImplicitCastState.class)) {
+                TypeGuard guard = state.key;
+                int signatureIndex = guard.getSignatureIndex();
+                for (SpecializationData specialization : usedSpecializations) {
+                    TypeMirror specializationType = specialization.getSignatureParameters().get(signatureIndex).getType();
+                    if (!state.node.getTypeSystem().lookupByTargetType(specializationType).isEmpty()) {
+                        return true;
+                    }
+                }
+            }
+            return false;
+        }
+
     }
 
-    static final class FrameState {
+    public static final class FrameState {
 
         private final FlatNodeGenFactory factory;
         private final Map<String, LocalVariable> values = new HashMap<>();
@@ -7778,6 +8007,14 @@ public class FlatNodeGenFactory {
             this.factory = factory;
             this.mode = mode;
             this.method = method;
+        }
+
+        public void setSkipStateChecks(boolean skipStateChecks) {
+            setBoolean("$stateChecks", skipStateChecks);
+        }
+
+        public boolean isSkipStateChecks() {
+            return getBoolean("$stateChecks", false);
         }
 
         public void addCaughtException(TypeMirror exceptionType) {
@@ -7894,7 +8131,11 @@ public class FlatNodeGenFactory {
         }
 
         public FrameState copy() {
-            FrameState copy = new FrameState(factory, mode, method);
+            return copy(this.mode);
+        }
+
+        public FrameState copy(NodeExecutionMode newMode) {
+            FrameState copy = new FrameState(factory, newMode, method);
             copy.values.putAll(values);
             copy.caughtTypes.addAll(caughtTypes);
             copy.directValues.putAll(directValues);
@@ -8000,6 +8241,10 @@ public class FlatNodeGenFactory {
                     builder.startGroup().tree(var.createReference()).end();
                 }
             }
+
+            for (VariableElement arg : factory.plugs.additionalArguments()) {
+                builder.variable(arg);
+            }
         }
 
         public void addParametersTo(CodeExecutableElement targetMethod, int varArgsThreshold, String... optionalNames) {
@@ -8020,6 +8265,9 @@ public class FlatNodeGenFactory {
                     }
                 }
             }
+            for (VariableElement arg : factory.plugs.additionalArguments()) {
+                targetMethod.addParameter(arg);
+            }
         }
 
         @Override
@@ -8029,7 +8277,7 @@ public class FlatNodeGenFactory {
 
     }
 
-    static final class LocalVariable {
+    public static final class LocalVariable {
 
         private final TypeMirror typeMirror;
         private final CodeTree accessorTree;
@@ -8119,7 +8367,7 @@ public class FlatNodeGenFactory {
 
     }
 
-    enum NodeExecutionMode {
+    public enum NodeExecutionMode {
 
         FAST_PATH,
         SLOW_PATH,
@@ -8142,6 +8390,63 @@ public class FlatNodeGenFactory {
             return this == FAST_PATH;
         }
 
+    }
+
+    public CodeTree createOnlyActive(FrameState frameState, List<SpecializationData> filteredSpecializations, Collection<SpecializationData> allSpecializations) {
+        CodeTreeBuilder b = CodeTreeBuilder.createBuilder();
+        CodeTree tree = multiState.createContainsOnly(frameState, 0, -1, StateQuery.create(SpecializationActive.class, filteredSpecializations),
+                        StateQuery.create(SpecializationActive.class, allSpecializations));
+        b.tree(tree);
+        if (!tree.isEmpty()) {
+            b.string(" && ");
+        }
+        b.tree(multiState.createContains(frameState,
+                        StateQuery.create(SpecializationActive.class, allSpecializations)));
+        return b.build();
+    }
+
+    public CodeTree createIsImplicitTypeStateCheck(FrameState frameState, TypeMirror targetType, TypeMirror specializationType, int signatureIndex) {
+        List<ImplicitCastData> casts = typeSystem.lookupByTargetType(specializationType);
+        if (casts.isEmpty()) {
+            return null;
+        }
+
+        long mask = 1;
+        if (!ElementUtils.typeEquals(targetType, specializationType)) {
+            for (ImplicitCastData cast : casts) {
+                mask = mask << 1;
+                if (ElementUtils.typeEquals(cast.getSourceType(), targetType)) {
+                    break;
+                }
+            }
+        }
+        CodeTreeBuilder b = new CodeTreeBuilder(null);
+        b.tree(multiState.createExtractInteger(frameState, StateQuery.create(ImplicitCastState.class, new TypeGuard(typeSystem, specializationType, signatureIndex))));
+        b.string(" == ");
+        b.string(BitSet.formatMask(mask, casts.size() + 1));
+        return b.build();
+    }
+
+    public void addQuickeningStateParametersTo(CodeExecutableElement method, FrameState frameState, Collection<SpecializationData> specializations) {
+        for (BitSet set : multiState.getSets()) {
+            if (!MultiStateBitSet.isRelevantForQuickening(set, specializations)) {
+                continue;
+            }
+
+            LocalVariable local = frameState.get(set.getName());
+            if (local != null) {
+                method.addParameter(local.createParameter());
+            }
+        }
+    }
+
+    public void loadQuickeningStateBitSets(CodeTreeBuilder b, FrameState frameState, Collection<SpecializationData> specializations) {
+        for (BitSet set : multiState.getSets()) {
+            if (!MultiStateBitSet.isRelevantForQuickening(set, specializations)) {
+                continue;
+            }
+            b.tree(set.createLoad(frameState));
+        }
     }
 
 }
